--- a/typescript/sdk/package.json
+++ b/typescript/sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyperlane-xyz/sdk",
   "description": "The official SDK for the Hyperlane Network",
-  "version": "8.6.1",
+  "version": "8.6.1-lukso-dev1",
   "dependencies": {
     "@arbitrum/sdk": "^4.0.0",
     "@aws-sdk/client-s3": "^3.577.0",
@@ -10,6 +10,7 @@
     "@cosmjs/stargate": "^0.32.4",
     "@hyperlane-xyz/core": "5.11.3",
     "@hyperlane-xyz/utils": "8.6.1",
+    "@lukso/lsp4-contracts": "^0.16.2",
     "@safe-global/api-kit": "1.3.0",
     "@safe-global/protocol-kit": "1.3.0",
     "@safe-global/safe-deployments": "1.37.23",
