--- a/solidity/package.json
+++ b/solidity/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@hyperlane-xyz/core",
   "description": "Core solidity contracts for Hyperlane",
-  "version": "5.11.3",
+  "version": "5.11.3-lukso-dev0",
   "dependencies": {
     "@arbitrum/nitro-contracts": "^1.2.1",
     "@eth-optimism/contracts": "^0.6.0",
-    "@hyperlane-xyz/utils": "8.6.1",
+    "@hyperlane-xyz/utils": "workspace:*",
     "@layerzerolabs/lz-evm-oapp-v2": "2.0.2",
     "@lukso/lsp7-contracts": "0.16.3",
     "@lukso/lsp8-contracts": "0.16.2",
