--- a/typescript/cli/package.json
+++ b/typescript/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hyperlane-xyz/cli",
-  "version": "8.6.1",
+  "version": "8.6.1-lukso-dev0",
   "description": "A command-line utility for common Hyperlane operations",
   "dependencies": {
     "@aws-sdk/client-kms": "^3.577.0",
