--- a/solidity/package.json
+++ b/solidity/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@arbitrum/nitro-contracts": "^1.2.1",
     "@eth-optimism/contracts": "^0.6.0",
-    "@hyperlane-xyz/utils": "workspace:*",
+    "@hyperlane-xyz/utils": "8.6.1-lukso-dev0",
     "@layerzerolabs/lz-evm-oapp-v2": "2.0.2",
     "@lukso/lsp7-contracts": "0.16.3",
     "@lukso/lsp8-contracts": "0.16.2",
