--- a/typescript/cli/package.json
+++ b/typescript/cli/package.json
@@ -6,7 +6,7 @@
     "@aws-sdk/client-kms": "^3.577.0",
     "@aws-sdk/client-s3": "^3.577.0",
     "@hyperlane-xyz/registry": "9.5.0",
-    "@hyperlane-xyz/sdk": "workspace:*",
+    "@hyperlane-xyz/sdk": "8.6.1-lukso-dev0",
     "@hyperlane-xyz/utils": "8.6.1",
     "@inquirer/core": "9.0.10",
     "@inquirer/figures": "1.0.5",
