--- a/typescript/helloworld/package.json
+++ b/typescript/helloworld/package.json
@@ -3,9 +3,9 @@
   "description": "A basic skeleton of an Hyperlane app",
   "version": "8.6.1-lukso-dev0",
   "dependencies": {
-    "@hyperlane-xyz/core": "workspace:*",
+    "@hyperlane-xyz/core": "5.11.3-lukso-dev0",
     "@hyperlane-xyz/registry": "9.5.0",
-    "@hyperlane-xyz/sdk": "workspace:*",
+    "@hyperlane-xyz/sdk": "8.6.1-lukso-dev0",
     "@openzeppelin/contracts-upgradeable": "^4.9.3",
     "ethers": "^5.7.2"
   },
