--- a/typescript/infra/package.json
+++ b/typescript/infra/package.json
@@ -13,11 +13,11 @@
     "@ethersproject/hardware-wallets": "^5.7.0",
     "@ethersproject/providers": "*",
     "@google-cloud/secret-manager": "^5.5.0",
-    "@hyperlane-xyz/cli": "8.6.1",
-    "@hyperlane-xyz/helloworld": "8.6.1",
+    "@hyperlane-xyz/cli": "8.6.1-lukso-dev0",
+    "@hyperlane-xyz/helloworld": "8.6.1-lukso-dev0",
     "@hyperlane-xyz/registry": "9.5.0",
-    "@hyperlane-xyz/sdk": "workspace:*",
-    "@hyperlane-xyz/utils": "8.6.1",
+    "@hyperlane-xyz/sdk": "8.6.1-lukso-dev0",
+    "@hyperlane-xyz/utils": "8.6.1-lukso-dev0",
     "@inquirer/prompts": "3.3.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@safe-global/api-kit": "1.3.0",
