--- a/typescript/sdk/package.json
+++ b/typescript/sdk/package.json
@@ -8,8 +8,8 @@
     "@chain-registry/types": "^0.50.14",
     "@cosmjs/cosmwasm-stargate": "^0.32.4",
     "@cosmjs/stargate": "^0.32.4",
-    "@hyperlane-xyz/core": "workspace:*",
-    "@hyperlane-xyz/utils": "workspace:*",
+    "@hyperlane-xyz/core": "5.11.3-lukso-dev0",
+    "@hyperlane-xyz/utils": "8.6.1-lukso-dev0",
     "@lukso/lsp4-contracts": "^0.16.2",
     "@safe-global/api-kit": "1.3.0",
     "@safe-global/protocol-kit": "1.3.0",
