--- a/typescript/widgets/package.json
+++ b/typescript/widgets/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "@cosmos-kit/react": "^2.18.0",
     "@headlessui/react": "^2.1.8",
-    "@hyperlane-xyz/sdk": "workspace:*",
-    "@hyperlane-xyz/utils": "workspace:*",
+    "@hyperlane-xyz/sdk": "8.6.1-lukso-dev0",
+    "@hyperlane-xyz/utils": "8.6.1-lukso-dev0",
     "@interchain-ui/react": "^1.23.28",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@solana/wallet-adapter-react": "^0.15.32",
