--- a/solidity/package.json
+++ b/solidity/package.json
@@ -7,6 +7,7 @@
     "@eth-optimism/contracts": "^0.6.0",
     "@hyperlane-xyz/utils": "8.6.1-lukso-dev0",
     "@layerzerolabs/lz-evm-oapp-v2": "2.0.2",
+    "@lukso/lsp0-contracts": "^0.15.1",
     "@lukso/lsp7-contracts": "0.16.3",
     "@lukso/lsp8-contracts": "0.16.2",
     "@openzeppelin/contracts": "^4.9.3",
