--- a/typescript/sdk/package.json
+++ b/typescript/sdk/package.json
@@ -12,6 +12,7 @@
     "@hyperlane-xyz/cosmos-sdk": "16.0.0",
     "@hyperlane-xyz/starknet-core": "16.0.0",
     "@hyperlane-xyz/utils": "16.0.0",
+    "@lukso/lsp-hyperlane-token-routers": "./lukso-lsp-hyperlane-token-routers-0.1.0.tgz",
     "@safe-global/api-kit": "1.3.0",
     "@safe-global/protocol-kit": "1.3.0",
     "@safe-global/safe-core-sdk-types": "2.3.0",
