--- a/solidity/package.json
+++ b/solidity/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@hyperlane-xyz/core",
   "description": "Core solidity contracts for Hyperlane",
-  "version": "8.0.1",
+  "version": "8.1.0",
   "dependencies": {
     "@arbitrum/nitro-contracts": "^1.2.1",
     "@chainlink/contracts-ccip": "^1.5.0",
     "@eth-optimism/contracts": "^0.6.0",
     "@hyperlane-xyz/utils": "13.4.0",
     "@layerzerolabs/lz-evm-oapp-v2": "2.0.2",
+    "@lukso/lsp7-contracts": "^0.16.8",
+    "@lukso/lsp8-contracts": "^0.16.7",
     "@matterlabs/hardhat-zksync-solc": "1.2.5",
     "@matterlabs/hardhat-zksync-verify": "1.7.1",
     "@openzeppelin/contracts": "^4.9.3",
