--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@lukso/lsp-hyperlane-token-routers": "./lukso-lsp-hyperlane-token-routers-0.1.0.tgz",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^8.1.6",
     "@typescript-eslint/parser": "^8.1.6",
